Added pre-load for 'loading' image.
Former-commit-id: 77776c9dc2f947f2e563cacc33b08a13b8b9880b
Former-commit-id: 5e1d854013151243d975df651f9f782a55b7a632
Former-commit-id: 39fac7564e5f47a3a0ebe633d9d0c891a8272c4e
Former-commit-id: 22b4d154d4587aad3306e4977835cfcbe62aec24
Former-commit-id: 6b6ad7f5d76805c9f2b99253a0e804a12172f629
Former-commit-id: 0975bc7a20170ed4434bd1951ced43ff04aa51da

--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -32,6 +32,7 @@
     google.load("jquery", "1.4.2");
 	google.load("jqueryui", "1.8");
 	//]]>
+	var preLoadLoadingImage = $('<img />').attr('src', '{{ THEME_MEDIA_URL }}images/loading.jpg');
 </script>
 {% block head %}{% endblock %}
 </head>
