Reworked subscriptions to be title-only for now, suspect series subscriptions will be it's own entity.  First pass at showing subscriptions on profile page, and added ability to add a subscription to views.
Former-commit-id: 014cb3ece9ac6cd10301261833df9ebe1f721de2
Former-commit-id: 683baea8bfaa05edead10ddd1c19c095bb3125ad
Former-commit-id: 0c3dc5d35aabeb155b1107bddd0004abd034ba09
Former-commit-id: 29fd66960cca60bde1c34bd0277a8f7b99a95dd3
Former-commit-id: f2619d3e871e53c3cb1b082122de18066287a752
Former-commit-id: a854a10709ec155044e701812705ab9afe668229

--- a/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
+++ b/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
@@ -37,6 +37,8 @@
     {{ msg }}
 </p>
 {% endif %}
+{% if subscription_added %}<h3>Thanks for subscribing to {{ subscription_added.title.name }}!</h3>
+{% endif %}
 <dl class="table-display">
     <dt>
         Username:
@@ -108,8 +110,12 @@
 <div class="pb-float-clear">
 </div>
 {% if user.subscriptions.all %}<h3>Subscriptions</h3>
-{% for subscription in user.subscriptions.all %}
-{{ subscription.title.name }}
-{% endfor %}
+<ul class="pb-subscription-list">
+    {% for subscription in user.subscriptions.all %}
+    <li>
+        {{ subscription.title.name }} - New Episode Every {{ subscription.day_interval }} days
+    </li>
+    {% endfor %}
+</ul>
 {% endif %}
 {% endblock %}
