Updated with first solid cut at Title Subscribe/Unsubscribe/Re-Subscribe, as well as display of Active/Inactive Subscriptions.
Former-commit-id: 7901772ceee890c7e26f9ef9b43c702405eb3f85
Former-commit-id: c817b8827b50d63f0ce06a4631b43bc91a684100
Former-commit-id: 2aadc580958c7c43b6175868a700851053eae23e
Former-commit-id: a9787e783391b4dd85d9a15ba856d3334faa8596
Former-commit-id: cbdb8e28464453e53c1ca0065973818b35a42c5b
Former-commit-id: aca1126fef292029a9843e919940b4737ff0fc78

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
@@ -1,3 +1,4 @@
+{% load title_templatetags %}
 <!-- Begin SubscriptionBox -->
 <div class="pb-infobox" id="subscriptionBox">
     <div class="pb-infobox-left">
@@ -8,13 +9,7 @@
             <br>
             Book Now!
         </div>
-		<div style="float: left; margin: 8px 0 0 0px;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
-        </div>
-        <div style="float: left; margin: 0 0 10px 5px;">
-            Download Whole Audio Book<br/>
-			and Bonus Content for $1.99
-        </div>
+		
         <div style="float: left;">
             <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
         </div>
@@ -22,32 +17,9 @@
             <a href="/rss/feeds/episodes/{{ title.slug }}">Subscribe Free via RSS Feed</a>
         </div>
 		<div class="pb-float-clear"></div>
-		<div style="float: left;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
-        </div>
+		
         <div style="float: left; margin: 2px 0 10px 5px;">
-            Subscribe Free via iTunes
-        </div>
-		<div class="pb-float-clear"></div>
-		<div style="float: left;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
-        </div>
-        <div style="float: left; margin: 2px 0 10px 5px;">
-            Subscribe Free via Zune
-        </div>
-		<div class="pb-float-clear"></div>
-		<div style="float: left;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
-        </div>
-        <div style="float: left; margin: 2px 0 10px 5px;">
-            Get Print Version
-        </div>
-		<div class="pb-float-clear"></div>
-		<div style="float: left;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-rss-icon.gif">
-        </div>
-        <div style="float: left; margin: 2px 0 0 5px;">
-            Get PDF Version
+            {% show_title_subscription_action title user %}
         </div>
 		<div class="pb-float-clear"></div>
 		
