--- a/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
+++ b/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
@@ -6,5 +6,5 @@
 <h1>Your {{ site_name }} Account has been Activated!</h1>
 <p>Your account is now activated!</p>
 <br>
-<p>Now you can <a href="{% url user_signin %}">Login</a> with your new username and password</p>
+<p>Now you can <a href="{% url user_signin %}">Login</a> with your new username and password.</p>
 {% endblock %}
