Removed i18n from stock registration templates.
Former-commit-id: 79f5bb0800377058e322f57dbef5e967a68e315b
Former-commit-id: 66a0c6b8518053df3a2ef22c0874c2258891ada6
Former-commit-id: 12531931b25cefc830206981b43f758aaf773c3c
Former-commit-id: 476c6a04b72593c58d0b8f71168e34c8176330b9
Former-commit-id: b651f93c6302ba53e385019524d1736352043e40
Former-commit-id: 1a29a2599f8ed556316735b370ee0701f01ede1d

--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/associate.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/associate.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends "base.html
 
 {% block content %}
 {% if msg %}
@@ -16,14 +15,14 @@
     <input type="hidden" name="action" value="verify" />
     <input type="hidden" name="next" value="{{ next }}" />
 	<fieldset>
-		<legend>{% trans "Add a new OpenID URL" %}</legend>
+		<legend>Add a new OpenID URL</legend>
 		<div id="openid_choice">
     		<p>Please click your account provider:</p>
     		<div id="openid_btns"></div>
     	</div>
     	<div id="openid_input_area">
-            <label for="id_openid_url">{% trans "OpenId URL :" %}</label><br />{{ form.openid_url }}
-            <input name="openid_submit" type="submit" value="{% trans "Add OpenID" %}">
+            <label for="id_openid_url">OpenId URL :</label><br />{{ form.openid_url }}
+            <input name="openid_submit" type="submit" value="Add OpenID">
 		</div>
 	</fieldset>
 </form>	
