--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/changeopenid.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/changeopenid.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 {% block content %}
-<h4 class="headblue">{% trans "Account: change OpenID URL" %}</h4>
+<h4 class="headblue">Account: change OpenID URL</h4>
 
-<p>{% blocktrans %}This is where you can change your OpenID URL. Make sure you remember it!{% endblocktrans %}</p>
+<p>This is where you can change your OpenID URL. Make sure you remember it!</p>
 {% if form.errors %}
-<p class="errors">{% trans "Please correct errors below:" %}<br />
+<p class="errors">Please correct errors below:<br />
 	{% if form.openid_url.errors %} 
 		<span class="error">{{ form.openid_url.errors|join:", " }}</span>
 	{% endif %}
@@ -21,8 +20,8 @@
 <div class="aligned">
 	<form action="." method="post" accept-charset="utf-8">
 
-		<div id="form-row"><label for="id_openid_url">{% trans "OpenID URL:" %}</label>{{ form.openid_url }}</div>
-        <p><input type="submit" value="{% trans "Change OpenID" %}"></p>
+		<div id="form-row"><label for="id_openid_url">OpenID URL:</label>{{ form.openid_url }}</div>
+        <p><input type="submit" value="Change OpenID"></p>
 
 	</form>
 	</div>
