Added My Account link to header.
Former-commit-id: 87883a16cbf3e693ebb1c3d0ac416506613b567b
Former-commit-id: 9b218312364d238c114e9c644d362ad04816c8fc
Former-commit-id: d6d4835e13d8e614c1c46ca510287311a8facf5f
Former-commit-id: cf21a525e50d82d31d753000d5b54c2b3ab14cae
Former-commit-id: 1efe75b1b4646baa031d7e870ea269dae911a716
Former-commit-id: adc1cfc3aaa6b7ad76f17dcbabd3e542e87447b8

--- a/src/podiobooks/templates/themes/pb2-jq/header.html
+++ b/src/podiobooks/templates/themes/pb2-jq/header.html
@@ -12,7 +12,8 @@
                 | <a href="http://www.podiobooks.com/blog">Blog</a>
                 | <a href="http://community.podiobooks.com/">Community</a>
 				| {% if user.is_authenticated %}
-					<a href="{% url django_authopenid.views.signout %}">Logout {{ user.username }}</a>
+					<a href="{% url profile %}">My Account</a>
+					| <a href="{% url django_authopenid.views.signout %}">Logout {{ user.username }}</a>
 				  {% else %} 	
 					<a href="{% ssl_site_login_url %}">Login/Register</a>
  	              {% endif %}
