Removed old dojo-based theme.
Former-commit-id: 3b49cb1917e7ea1040c0413499396198e02e1043
Former-commit-id: 5f81d08b1a94ec64928804f591e8652dcf2cc5b1
Former-commit-id: 75ccd5826812854477742345cabc7c9291acd315
Former-commit-id: f2a6086d3760bcd7555cf48dd3ac5f3782c7b3e5
Former-commit-id: 55e3d52d1bab51aa0bbd054ecdec81fa382fd74f
Former-commit-id: 314c0f8d19ccdba5fabfbe56db87c8edc41f3c9e

--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -32,7 +32,9 @@
     google.load("jquery", "1.4.2");
 	google.load("jqueryui", "1.8");
 	//]]>
-	var preLoadLoadingImage = $('<img />').attr('src', '{{ THEME_MEDIA_URL }}images/loading.jpg');
+</script>
+<script language="JavaScript" type="text/javascript">
+	var preLoadLoadingImage = $('<img />').attr('src', '{{ THEME_MEDIA_URL }}images/loading.gif');
 </script>
 {% block head %}{% endblock %}
 </head>
