--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_awardshow.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_awardshow.html
@@ -1,52 +1,26 @@
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery.cycle.lite.1.0.min.js">
+</script>
 {% if award_list %}
-	{% if award_list|length_is:"1" %}
-		{% for award in award_list %}
-			<a href="{{ award.url }}"><img src="{{ award.image.url }}" alt="{{ award.name }}" style="margin: 0 0 0 10px; border: none"/></a>
-		{% endfor %}
-	{% else %}
-		<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojox/image/resources/SlideShow.css">
-		<style type=text/css>
-		    .slideShowWrapper {
-		        position: relative;
-		        background: #fff;
-		        padding: 8px;
-		        border: none;
-		        padding-bottom: 20px;
-		        overflow: hidden;
-		        -moz-border-radius: 3pt;
-		        -webkit-border-radius: 4pt;
-		        -webkit-drop-shadow: #ccc 4pt;
-		    }
-			.slideShowTitle {
-				display: none;
-			}
-		</style>
-		<script type="text/javascript">
-		    dojo.require("dojo.data.ItemFileReadStore");
-		    dojo.require("dojox.image.SlideShow");
-		    
-		    var awardShowStoreData = {
-		        items: [
-				{% for award in award_list %}{
-					"imageUrl": "{{ award.image.url }}",
-					"title": "{{ award.name }}",
-					"link": "{{ award.url }}"
-		        },{% endfor %}
-				]
-		    }
-		    
-		    dojo.addOnLoad(function(){
-		        dijit.byId('awardshow').setDataStore(awardShowStore, {
-		            query: {},
-		            count: 20
-		        });
-		    });
-		</script>
-		<div class="tundra">
-		    <div dojoType="dojo.data.ItemFileReadStore" data="awardShowStoreData" jsId="awardShowStore">
-		    </div>
-		    <div id="awardshow" dojoType="dojox.image.SlideShow" noLink="true" fixedHeight="true" imageHeight="100" imageWidth="100" hasNav="false" autoStart="true" slideshowInterval="10">
-		    </div>
-		</div>
-	{% endif %}
+{% if award_list|length_is:"1" %}
+{% for award in award_list %}<a href="{{ award.url }}"><img src="{{ award.image.url }}" alt="{{ award.name }}" style="margin: 0 0 0 10px; border: none"/></a>{% endfor %}
+{% else %}
+<script type="text/javascript">
+	$.fn.cycle.defaults = { 
+        timeout:       4000,  // milliseconds between slide transitions (0 to disable auto advance) 
+        speed:         1000,  // speed of the transition (any valid fx speed value)  
+        height:       'auto', // container height 
+        sync:          1,     // true if in/out transitions should occur simultaneously 
+        fit:           1,     // force slides to fit container 
+        pause:         1,     // true to enable "pause on hover" 
+        delay:         0,     // additional delay (in ms) for first transition (hint: can be negative) 
+    };
+	$(function() {
+    	$('#awardShow').cycle();
+		$('#awardShow').fadeIn();
+	});
+</script>
+<div id="awardShow" style="display:none;">
+    {% for award in award_list %}<a href="{{ award.url }}"><img src="{{ award.image.url }}" alt="{{ award.name }}" style="margin: 0 0 0 10px; border: none"/></a>{% endfor %}
+</div>
+{% endif %}
 {% endif %}
