Moved/replaced book_shelf_jq.js into the theme dir.

--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -20,11 +20,11 @@
 {% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %}
 
 <!-- Begin JavaScript Includes for Shelf Interactivity -->
-<script src="{{ MEDIA_URL }}js/jquery/js/jcarousellite_1.0.1.pack.js">
+<script src="{{ MEDIA_URL }}js/jquery/jcarousellite_1.0.1.pack.js">
 </script>
-<script src="{{ MEDIA_URL }}js/pbwidgets/book_shelf/book_shelf_jq.js">
+<script src="{{ MEDIA_URL }}js/jquery/jquery.appear-1.1.1.min.js">
 </script>
-<script src="{{ MEDIA_URL }}js/jquery/js/jquery.appear-1.1.1.min.js">
+<script src="{{ THEME_MEDIA_URL }}js/book_shelf_jq.js">
 </script>
 <!-- End JavaScript Includes for Shelf Interactivity -->
 
