Added templates/tag for donation button.
Former-commit-id: 73d16de9546434ba25076e46ecffc753f3c5d910
Former-commit-id: 6c67df74234ef8675d97839fb8992dafe81c0e99
Former-commit-id: bf8dc8a045e2948cdff04e74bedc15de75e016e6
Former-commit-id: 92fef51a0cd06efe4d195947741bed288a5d56e6
Former-commit-id: 008feef27cc7b37b8fc6f84363b35a658396d343
Former-commit-id: 6b3120022a6b26dfdd362247b73f974d182b1f47

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
@@ -23,6 +23,8 @@
         </div>
 		<div class="pb-float-clear"></div>
 		
+		{% show_donation_button title %}
+		
     </div>
     <div class="pb-infobox-right">
     </div>
