Added link to real local flatpage donate page to footer.
Former-commit-id: 17587c817ca8001555e05692860491b6572e8b9e
Former-commit-id: b0997a3fc1a52efb234822bc3c28e585cd0d5f45
Former-commit-id: cac442af7cffc8083a78c55c3dc9ce282fd1c447
Former-commit-id: 011cf29076be60d847ee012cf92f9c0d0bb3eeb3
Former-commit-id: e6e5ceb9529cdfe8aebff090b82683abef1865c3
Former-commit-id: deddaabbea95e7fd0079a3e39174774c78841821

--- a/src/podiobooks/templates/themes/pb2-jq/footer.html
+++ b/src/podiobooks/templates/themes/pb2-jq/footer.html
@@ -10,7 +10,7 @@
         <div class="pb-footer-text-important">
             <a href="#">Send us Feedback</a>
             | <a href="#">Report a Problem</a>
-            | <a href="#">Donations</a>
+            | <a href="/donate/">Donations</a>
         </div>
         <br>
         Text and Layout Copyright &copy; 2005-2009 Podiobooks.com. All rights reserved.
