Refactored all the subscription stuff over into it's own module, added a separate page to view/manage subscriptions.
Former-commit-id: c8de3803dde4535c17fb06c9bd4c6069598af513
Former-commit-id: 56ff89efded051a80923a7ff89ccbec421ae8327
Former-commit-id: 055f748d5b023afada852d1b1b89401602eaee8e
Former-commit-id: dfc010c3265c89e2cae8c870debf9d6d4cb1e6e0
Former-commit-id: 430b224824027c1fdc7806ccf9ed1fdd3ef3d1a1
Former-commit-id: 841649947162ab1bd3e046a495be68b66eaf0199

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
@@ -1,4 +1,5 @@
 {% load title_templatetags %}
+{% load subscription_templatetags %}
 <!-- Begin SubscriptionBox -->
 <div class="pb-infobox" id="subscriptionBox">
     <div class="pb-infobox-left">
