--- a/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
+++ b/src/podiobooks/templates/themes/pb2-jq/profile/profile.html
@@ -33,39 +33,13 @@
 {% endblock %}
 {% block title %}Podiobooks User Profile{% endblock %}
 {% block content %}
-
 {% if msg %}
 <p class="error">
-	{% if msg = 'notsubscribed' %}
-		You are not subscribed to {{ title_released }} you tried to release episodes of. <a href="{% url title_subscribe title_released %}">Subscribe?</a>
-	{% endif %}
-	{% if msg = 'nomoreepisodes' %}
-		There are no more episodes of {{ title_released }} to release.
-	{% endif %}
+    {{ msg }}
 </p>
 {% endif %}
-
-{% if title_subscription_added %}
-{% if title_already_subscribed %}<h3>Hi, looks like you are already subscribed to "{{ title_subscription_added.title.name }}".</h3>
-{% else %}
-<h3>Thanks for {% if title_resubscribed %}Re-{% endif %}Subscribing to "{{ title_subscription_added.title.name }}"!</h3>
-{% endif %}
-{% endif %}
-
-{% if title_subscription_removed %}
-{% if title_not_subscribed %}<h3>Hi, looks like you weren't actively subscribed to "{{ title_subscription_removed.name }}".</h3>
-{% else %}<h3>You've been unsubscribed from "{{ title_subscription_removed.name }}".</h3>
-{% endif %}
-{% endif %}
-
-{% if title_subscription_one_released %}
-<h3>You've released one more episode of "{{ title_subscription_one_released.title.name }}" into your custom feed.</h3>
-{% endif %}
-
-{% if title_subscription_all_released %}
-<h3>You've released all episodes of "{{ title_subscription_all_released.title.name }}" into your custom feed.</h3>
-{% endif %}
-
+<h1>{{ user.username }}'s Profile</h1>
+<h3><a href="{% url subscription %}">Manage Your Podiobook Subscriptions</a></h3>
 <dl class="table-display">
     <dt>
         Username:
@@ -136,5 +110,4 @@
 </dl>
 <div class="pb-float-clear">
 </div>
-{% show_title_subscriptions user %}
 {% endblock %}
