--- a/src/podiobooks/templates/themes/pb2-jq/footer.html
+++ b/src/podiobooks/templates/themes/pb2-jq/footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
     <div id="pb-footer-text">
         <a href="#">FAQ</a>
-        | <a href="#">Authors</a>
+        | <a href="/authors/">Authors</a>
         | <a href="#">Privacy and Legal</a>
         | <a href="#">Blog</a>
         | <a href="#">Promos and Banners</a>
