Added staff flatpage, and footer link.
Former-commit-id: 9b60fd03025f7dca0b26d3ecc0047480b0a84716
Former-commit-id: 1107f9a34167d1a52221b3301bf033a21a6d150c
Former-commit-id: 95871608cc970a2f739e46897c4b574fc0a9eabc
Former-commit-id: 1f7794b6c992b921484efac5e79752d841b76dd4
Former-commit-id: 294265e9e9815c2bbb223fdc8088784399cf3077
Former-commit-id: ec6b24b7eac6cc93242410bce884bd25f1817560

--- a/src/podiobooks/templates/themes/pb2-jq/footer.html
+++ b/src/podiobooks/templates/themes/pb2-jq/footer.html
@@ -2,6 +2,7 @@
     <div id="pb-footer-text">
         <a href="#">FAQ</a>
         | <a href="/authors/">Authors</a>
+		| <a href="/staff/">Staff</a>
         | <a href="#">Privacy and Legal</a>
         | <a href="#">Blog</a>
         | <a href="#">Promos and Banners</a>
