--- a/src/podiobooks/templates/themes/pb2-jq/header.html
+++ b/src/podiobooks/templates/themes/pb2-jq/header.html
@@ -1,7 +1,7 @@
 {% load global_templatetags %}<!-- Header - Logo and Navigation Bar -->
 <div id="header">
     <div id="pb-header-background"> 
-		<a href='/'><img alt='Podiobooks Logo' src='{{MEDIA_URL}}/themes/pb2/images/pb-logo.jpg' /></a>
+		<a href='/'><img alt='Podiobooks Logo' src='{{THEME_MEDIA_URL}}images/pb-logo.jpg' /></a>
 	</div>
        <!-- <div id="pb-header-click-region" onclick="document.location.href = ('/')"></div>-->
 		<div class='pb-header-menubar-top'></div>
