Changed name of x-click button to make-a-donation.gif.
Former-commit-id: 840caacae20d4814e516219e7a4b42e683ac0b34
Former-commit-id: a78ec0ec4de4946f7a7b4eb3dd053bcfc49b9f85
Former-commit-id: 9fcc254a6ab7a4cdf818acb615b6122eb95ef179
Former-commit-id: 71bc6dcae25e329ac9151f22c0409411fef8a87b
Former-commit-id: 41f7d940b451b787b6dc7770f4885074c1950e4d
Former-commit-id: 756e950e56bbab8424dd3fef83d2f7b959289671

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_donation_button.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/tags/show_donation_button.html
@@ -17,7 +17,7 @@
 		<input type="hidden" name="currency_code" value="USD">
 		<input type="hidden" name="tax" value="0">
         <br/>
-        <input type="image" src="{{ MEDIA_URL }}/images/x-click-but21.gif" border="0" name="submit" alt="Make donations with PayPal - it's fast, free and secure!">
+        <input type="image" src="{{ MEDIA_URL }}/images/make-a-donation.gif" border="0" name="submit" alt="Make donations with PayPal - it's fast, free and secure!">
     </form>
 </div>
 {% endif %}
