Added opacity off/on to avoid FOUC for accordion.
Former-commit-id: d4cc6ec2370caec5f20507ba1e43a75513ed7fd4
Former-commit-id: faa8f987ad5857bbf2eff2abff4f64eee4905500
Former-commit-id: 927c7014f951b18c58f39afd8c916bc89526f82b
Former-commit-id: 99716c0276dd3f61958aeeeb3ba500edcc3e0a9f
Former-commit-id: 641693071184e0f2f7ba42a27de7cb0c48eae587
Former-commit-id: 696669f15ee6e72df95d8cbe32daa18331e58eaf

--- a/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/title/title_subscriptionbox.html
@@ -11,16 +11,17 @@
         </div>
         <div class="pb-float-clear">
         </div>
-        <div id="accordion">
+        <div id="accordion" style="opacity: 0;">
             <h2><a href="#rss">Subscribe for Free!</a></h2>
             <div id="rss">
-                <a href="/rss/feeds/episodes/{{ title.slug }}">Copy This URL into Your Podcatcher</a>
+                <a href="/rss/feeds/episodes/{{ title.slug }}">Copy This URL</a>
+                into Your Podcatcher
                 <br>
                 (Help text coming soon)
             </div>
             <h2><a href="#customrss">Custom Subscription</a></h2>
             <div id="customrss">
-                <div style="float: left; margin: 2px 0 10px 5px;">
+                <div>
                     {% show_title_subscription_action title user %}
                 </div>
             </div>
@@ -38,6 +39,7 @@
 <script type="text/javascript">
     $(document).ready(function(){
         $('#accordion').accordion();
+        $('#accordion').css('opacity', 1);
     });
 </script>
 <!-- End SubscriptionBox -->
