--- a/src/podiobooks/templates/themes/pb2-jq/subscription/tags/show_title_subscription_action.html
+++ b/src/podiobooks/templates/themes/pb2-jq/subscription/tags/show_title_subscription_action.html
@@ -1,4 +1,4 @@
 {% if title_subscription and not title_subscription.deleted %}
 <a href="{% url title_unsubscribe title_subscription.title %}">Unsubscribe from this {% if title_subscription.finished %}finished{% endif %} book</a>
-{% else %}<a href="{% url title_subscribe title %}">{% if title_subscription.deleted %}Re-{% endif %}Subscribe for Free to with a Custom RSS Feed (Login Required)</a>
+{% else %}{% if title_subscription.deleted %}Re-{% endif %}Subscribe for Free to with a <a href="{% url title_subscribe title %}">Custom RSS Feed</a> (Login Required)
 {% endif %}
