--- a/src/podiobooks/templates/themes/pb2-jq/footer.html
+++ b/src/podiobooks/templates/themes/pb2-jq/footer.html
@@ -1,21 +1,20 @@
-<div id="footer">
-    <div id="pb-footer-text">
-        <a href="#">FAQ</a>
-        | <a href="/authors/">Authors</a>
-		| <a href="/staff/">Staff</a>
-        | <a href="#">Privacy and Legal</a>
-        | <a href="#">Blog</a>
-        | <a href="#">Promos and Banners</a>
-        | <a href="#">Community</a>
-        <br>
-        <div class="pb-footer-text-important">
-            <a href="#">Send us Feedback</a>
-            | <a href="#">Report a Problem</a>
-            | <a href="/donate/">Donations</a>
-        </div>
-        <br>
-        Text and Layout Copyright &copy; 2005-2009 Podiobooks.com. All rights reserved.
-        <br>
-        See legal notes for audio file rights.
-    </div>
+<div class='pg-foot clearfix'>
+	<ul class='foot-nav'>
+	    <li><a href="#">FAQ</a></li>
+	    <li><a href="/authors/">Authors</a></li>
+		<li><a href="/staff/">Staff</a></li>
+	    <li><a href="#">Privacy and Legal</a></li>
+	    <li><a href="#">Blog</a></li>
+	    <li><a href="#">Promos and Banners</a></li>
+	    <li><a href="#">Community</a></li>
+	</ul>
+	<ul class='foot-nav-extra'>
+        <li><a href="#">Send us Feedback</a></li>
+        <li><a href="#">Report a Problem</a></li>
+        <li><a href="/donate/">Donations</a></li>
+	</ul>
+    <p>Text and Layout Copyright &copy; 2005-2009 Podiobooks.com. All rights reserved.</p>
+
+    <p>See legal notes for audio file rights.</p>
+    
 </div>
