--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
+
 {% load global_templatetags %}
 {% load shelf_templatetags %}
 {% load ad_templatetags %}
-{% block headtitle %}{{ site_name }} - Free Downloadable Audiobooks{% endblock %}
+
+{% block headtitle %}{{block.super}} - Free Downloadable Audiobooks{% endblock %}
+
+{% block body_class %}home{% endblock %}
+
 {% block head %}
+<!--
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css">
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css">
 <style type=text/css>
@@ -13,22 +19,25 @@
 		padding: 5px;
 	}  
 </style>
+-->
 {% endblock %}
 {% block content %} 
 
-{% url category_shelf 'placeholder_slug' as category_dropdown_url %} 
-{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %}
-
 <!-- Begin JavaScript Includes for Shelf Interactivity -->
+
+<!--
 <script src="{{ MEDIA_URL }}js/jquery/jcarousellite_1.0.1.pack.js">
 </script>
 <script src="{{ MEDIA_URL }}js/jquery/jquery.appear-1.1.1.min.js">
 </script>
 <script src="{{ THEME_MEDIA_URL }}js/book_shelf_jq.js">
 </script>
+-->
+
 <!-- End JavaScript Includes for Shelf Interactivity -->
 
 <!-- Begin JavaScript to Attach Interactivity to Shelves -->
+<!--
 <script type="text/javascript">
     /* On page ready, attach a jCarousel Widget to the Featured Shelf, setting the divs on either end as buttons */
     $(function(){
@@ -47,5 +56,7 @@
         });
     }
 </script>
+-->
+
 <!-- End JavaScript to Attach Interactivity to Shelves -->
 {% endblock %}
