Starting Shelves on homepage
Former-commit-id: 092c4b6abcf9c03ddd6d337ffc6e28536cf79865
Former-commit-id: 5f828272243aafc8518c6775e1ac42054d37f024
Former-commit-id: 99ada853c0d04246a5bdeaaec62a83c0a0d72518
Former-commit-id: 9d9c87c5134c272ccd683c568a057d49a74aee8d
Former-commit-id: 225dcf213b674f85e4c5aa81436b299dec36db6f
Former-commit-id: 8b4f60c19047dea14a87a62e1b3a0fc4aa7e17af

--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -3,6 +3,7 @@
 {% load global_templatetags %}
 {% load shelf_templatetags %}
 {% load ad_templatetags %}
+{% load title_templatetags %}
 
 {% block headtitle %}{{block.super}} - Free Downloadable Audiobooks{% endblock %}
 
@@ -22,6 +23,27 @@
 -->
 {% endblock %}
 {% block content %} 
+<h2 class='shelf-heading'>Featured</h2>
+<div class='shelf clearfix'>
+	
+	{% for t in featured_title_list %}
+	<div class='clearfix shelf-item'>
+		<h3><a href='{{t.get_absolute_url}}'>{{t.name}}</a></h3>
+		<p class='shelf-cover'>	<a href='{{t.get_absolute_url}}'>
+			{% if title.libsyn_show_id %}
+				<img src="http://images.libsyn.com/show/{{ tlibsyn_show_id }}/height/212/width/144" alt="Podiobook Cover for {{ t.name }}"/>
+			{% else %}
+				<img src="http://podiobooks.com/images/covers/{{ t.cover }}" alt="Podiobook Cover for '{{ t.name }}'" />
+			{% endif %}
+			</a>
+		</p>
+	
+		<p>{{t.description|truncatewords:"15"}}</p>
+	</div>
+	{% endfor %}
+</div>
+
+
 
 <!-- Begin JavaScript Includes for Shelf Interactivity -->
 
