--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -17,6 +17,7 @@
 	
 		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{MINI_CSS}}" />
 		<link rel="stylesheet" type=text/css href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery-ui.css" >
+		<script type="text/javascript" src="{{ MEDIA_URL }}{{MINI_JS}}"></script>
 		
 		<script type="text/javascript" src="http://use.typekit.com/coc0qsu.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
